--- a/Some Review.tex
+++ b/Some Review.tex
@@ -14,7 +14,7 @@
 \maketitle	
 	\begin{enumerate}
 		\item Change
-		\item For fixed $i,n \geq 1$ construct a space, $X$, with $\widetilde{H}_{i}(X) = \mathbb{Z}/n\mathbb{Z}$ and $\widetilde{H}_{j}(X) = 0$ for $j \neq i$.
+		\item BLAH For fixed $i,n \geq 1$ construct a space, $X$, with $\widetilde{H}_{i}(X) = \mathbb{Z}/n\mathbb{Z}$ and $\widetilde{H}_{j}(X) = 0$ for $j \neq i$.
 		\item \begin{enumerate}
 			\item  Compute the co/homology groups with $\mathbb{Z}$, $\mathbb{R}$ and $\mathbb{Z}/2\mathbb{Z}$ coefficients of $X = \mathbb{R}^{3} - A$ where $A = B \cup C$, $B$ is the $z$-axis, and $C$ is the unit circle in the $xy$-plane via a Mayer-Vietoris long exact sequence.
 			\item Describe how $X$ is homotopy equivalent to a torus.
