--- a/Some Review.tex
+++ b/Some Review.tex
@@ -17,7 +17,7 @@
 
 	\begin{enumerate}
 
-		\item B A N A N A S !!!!!!
+		\item Monkey longs for B A N A N A S !!!!!!
 
 		\item BLAH For fixed $i,n \geq 1$ construct a space, $X$, with $\widetilde{H}_{i}(X) = \mathbb{Z}/n\mathbb{Z}$ and $\widetilde{H}_{j}(X) = 0$ for $j \neq i$.
 		\item \begin{enumerate}
